<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/LayoutMargins"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@color/colorPrimaryDark">

        <ImageView
            android:id="@+id/album_return"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:clickable="true"
            android:contentDescription="@string/now_playing"
            android:rotation="180"
            android:src="@drawable/playing" /> <!-- Playing icon re-used but reversed to indicate going back to the main screens -->

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight=".4" /> <!-- Dummy View to center the track icons -->

        <ImageView
            android:id="@+id/previous_track"
            style="@style/playingControlIcons"
            android:contentDescription="@string/rewind"
            android:src="@drawable/double_arrow" />

        <ImageView
            android:id="@+id/play"
            style="@style/playingControlIcons"
            android:contentDescription="@string/play"
            android:src="@drawable/play" />

        <ImageView
            android:id="@+id/next_track"
            style="@style/playingControlIcons"
            android:contentDescription="@string/fastforward"
            android:rotation="180"
            android:src="@drawable/double_arrow" />

        <View
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_weight="1" /> <!-- Dummy View to center the track icons -->

    </LinearLayout>


</RelativeLayout>
